2016-11-11  Bruno Haible  <bruno@clisp.org>

	Fix weird errors when rebuilding 'base' after having changed CFLAGS.
	* makemake.in (clean1): Remove also the .o files in the BASE_MODULES.

2016-11-11  Bruno Haible  <bruno@clisp.org>

	Fix a "No more room for LISP objects" error when building syscalls.
	The clisp modprep call now needs at least -m 1180KW.
	* modules/syscalls/Makefile.in (calls.m.c): Add option -m 2MW.

2016-11-11  Bruno Haible  <bruno@clisp.org>

	Make GENERIC64A_HEAPCODES work again after the type predicates change
	from 2016-11-10.
	* lispbibl.d (immediate_bias_mask) [HEAPCODES]: Define.
	(immediate_object_p) [HEAPCODES]: Define using immediate_bias_mask.
	(immediate_number_p, charp, small_read_label_p, systemp, if_realp,
	if_rationalp, integerp, fixnump, posfixnump, floatp, short_float_p)
	[HEAPCODES]: Use immediate_bias_mask instead of
	immediate_bias | nonimmediate_bias_mask.

2016-11-11  Bruno Haible  <bruno@clisp.org>

	Fix compilation error of DEBUG_BACKTRACE feature with C++ compiler.
	Fixes a regression introduced on 2008-01-09.
	* debug.d (print_bt_to_frame): Change type of bt_ parameter.

2016-11-10  Bruno Haible  <bruno@clisp.org>

	Remind user to use -falign-functions=8 with GENERIC64_HEAPCODES.
	* lispbibl.d (C_CODE_ALIGNMENT, log2_C_CODE_ALIGNMENT):
	For GENERIC64_HEAPCODES, require that the alignment is at least 8.

2016-11-10  Bruno Haible  <bruno@clisp.org>

	New memory model GENERIC64_HEAPCODES, for 64-bit machines.
	* lispbibl.d (GENERIC64_HEAPCODES): Define if GENERIC64A_HEAPCODES or
	GENERIC64B_HEAPCODES or GENERIC64C_HEAPCODES is defined.
	(oint_type_shift, oint_type_len, oint_type_mask, oint_data_shift,
	oint_data_len, oint_data_mask, garcol_bit_o, machine_bias,
	varobject_bias, cons_bias, immediate_bias, subr_bias, imm_type_shift,
	immediate_object_p, machinep): Define for each of GENERIC64A_HEAPCODES,
	GENERIC64B_HEAPCODES, GENERIC64C_HEAPCODES.
	(fixnum_type, sfloat_type, char_type, small_read_label_type,